Fix dependency issues and add CouchDB 3.x support with parallel testing
Major changes:
- Remove PostConstruct from PatchService to fix Spring circular dependency
- Disable Ektorp idle connection cleanup to prevent thread leaks
- Add comprehensive CouchDB 3.x support in docker-compose-war.yml
- Implement parallel Core2/Core3 testing with EHCache conflict resolution
- Fix Maven dependency issues (update versions, remove parent POM reference)
- Add CLAUDE.md documentation for AI-assisted development

Core fixes:
- Fix Spring bean initialization order issues
- Disable Ektorp cleanupIdleConnections in ConnectorPool
- Add thread management improvements for container shutdown
- Update EHCache configuration to prevent statistics thread conflicts

Docker improvements:
- Add health checks for all services
- Implement proper service dependencies
- Support CouchDB 2.x and 3.x in parallel
- Add volume mount configurations for Core3
- Update Dockerfiles with thread killer utilities

Build system:
- Update Maven dependencies to resolve conflicts
- Fix SBT repository URLs (HTTP to HTTPS)
- Add proper .gitignore for generated artifacts
- Improve build scripts for Docker environments

Testing:
- Enhanced test-war.sh with comprehensive integration tests
- Add repository initialization for all 4 repositories
- Implement proper error handling and status reporting
- Support parallel Core2/Core3 container testing

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>